force-app/main/default/objects/Candidate__c/fields/AppliedDate__c.field-meta.xml
<CustomField>
    <fullName>AppliedDate__c</fullName>
    <label>Applied Date</label>
    <type>Date</type>
    <inlineHelpText>Date the candidate submitted their application.</inlineHelpText>
</CustomField>