force-app/main/default/objects/Candidate__c/fields/InterviewDate__c.field-meta.xml
<CustomField>
    <fullName>InterviewDate__c</fullName>
    <label>Interview Date</label>
    <type>DateTime</type>
    <inlineHelpText>Scheduled date and time for the candidate&apos;s interview.</inlineHelpText>
</CustomField>