force-app/main/default/objects/Candidate__c/fields/LinkedInURL__c.field-meta.xml
<CustomField>
    <fullName>LinkedInURL__c</fullName>
    <label>LinkedIn URL</label>
    <type>Url</type>
    <inlineHelpText>Candidate&apos;s LinkedIn profile URL.</inlineHelpText>
</CustomField>