force-app/main/default/objects/Candidate__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
    <inlineHelpText>Candidate&apos;s primary phone number.</inlineHelpText>
</CustomField>