force-app/main/default/objects/Candidate__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position Applied For</label>
    <length>255</length>
    <type>Text</type>
    <inlineHelpText>Job title or position the candidate applied for.</inlineHelpText>
</CustomField>