force-app/main/default/objects/Candidate__c/fields/ResumeNotes__c.field-meta.xml
<CustomField>
    <fullName>ResumeNotes__c</fullName>
    <label>Resume Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <inlineHelpText>Recruiter notes about the candidate&apos;s resume and background.</inlineHelpText>
</CustomField>