force-app/main/default/objects/Candidate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <inlineHelpText>How the candidate found or was referred to this position.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Job Board</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Company Website</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>