force-app/main/default/objects/Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <inlineHelpText>Current stage of the candidate in the hiring pipeline.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>